# enoch-364day-calendar

./: .gitignore  README.md  pyproject.toml  requirements.yml
code/: README.md  requirements.txt
code/_archive/: cv_model_comparison.csv  ephemeris_timeseries.csv  harmonic_components.csv  mc_bootstrap_results.csv  mc_epoch_variation.csv  mc_parameter_perturbation.csv  optimal_model_parameters.csv  sensitivity_correction_cycle.csv  sensitivity_start_year.csv  sensitivity_year_length.csv
code/_archive/datasets/: monte_carlo_robustness_summary.csv  sensitivity_3parameter_mc_results.csv
code/_archive/datasets.x/: sensitivity_3parameter_grid_summary.csv
code/notebooks/: 01-parametric-sweep-global.ipynb  02-monte-carlo-robustness.ipynb  03-sensitivity-3parameter.ipynb  04-publication-figures.ipynb  05-fft-spectrum-catalog.ipynb  06-fft-model-selection.ipynb  07-fft-optimal-model.ipynb  08-294-resonance-analysis.ipynb  09-visualization-dashboard.ipynb
code/notebooks/_archive/: 01-calendar-ephemeris-validation.ipynb  02-fft-harmonic-analysis.ipynb  03-multi-harmonic-model-fitting.ipynb  04-parametric-sweep-analysis.ipynb  05-monte-carlo-robustness.ipynb  06-sensitivity-analysis.ipynb
code/notebooks/outputs/csvs/: 294_multiple_catalog.csv  analysis_comparison.csv  cv_model_comparison.csv  cv_results.csv  data_metadata.csv  drift_analysis.csv  (+21 more)
code/src/: __init__.py  calc.py  classifier.py  enoch.py  enoch_config.py  harmonic_analysis.py  lunar.py  monte_carlo.py  publication_style.py  sensitivity.py
code/src/_archive/: enoch_calendar.py  ephemeris.py
(+4 files in other folders)
