[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enoch-calendar"
version = "0.1.0"
description = "Planetary phase analysis and calendar classification system"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "pyswisseph>=2.10.3",
    "poliastro>=0.17.0",
    "astroquery>=0.4.6",
    "nasapy>=0.0.1",
    "spiceypy>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0.0",
    "pytest>=7.4.0",
    "ipykernel>=6.25.0",
]

[tool.setuptools]
package-dir = {"" = "code"}

[tool.setuptools.packages.find]
where = ["code"]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt"]
